aws/patterns/e2e-microservices-platform/iac/eks/istio-gw-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: istio-ingress-certs-tls # cert-manager managed # Matches secretName in Certificate CRD
      hosts:
        - "*.mycomp.org"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.mycomp.org"
      tls:
        httpsRedirect: true

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-service-vs
  namespace: microservices
spec:
  hosts:
    - "api.mycomp.org"
  gateways:
    - istio-system/public-gateway
  http:
    - match:
        - uri:
            prefix: "/api/users"
      route:
        - destination:
            host: user-service.microservices.svc.cluster.local
            port:
              number: 8080
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
      timeout: 10s
